--- a/hugo.yaml
+++ b/hugo.yaml
@@ -49,7 +49,7 @@ params:
   author: Pitt Pirates
   authorimage: ../assets/images/global/logo.png
   og_image: /images/tailbliss-cover.png
-  moto: "Sailing the STEM Seas"
+  moto: "FIRST Robotics Team 2642"
   description: "We're a lean, green, STEM machine!"
   disable_theme_toggle: false
   disable_stay_uptodate: false
