--- a/hugo.yaml
+++ b/hugo.yaml
@@ -105,7 +105,7 @@ params:
       url: 'https://www.facebook.com/FIRSTPittPirates2642/'
     instagram:
       enabled: true
-      url: 'https://www.instagram.com/p/CZFkGiJOgTh/'
+      url: 'https://www.instagram.com/2642_pitt_pirates/'
     twitter:
       enabled: true
       url: 'https://twitter.com/pittpirates2642'
