--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://frc2642.github.io/website/'
+baseURL: 'https://frc2642.github.io/'
 title: Pitt Pirates
 languageCode: en-us
 DefaultContentLanguage: en
