--- a/hugo.yaml
+++ b/hugo.yaml
@@ -70,7 +70,7 @@ params:
   p3:
     heading: "Backed by our great sponsors"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
+      - text: ""
     links:
       - text: Meet our investors and advisors
         url: "#"
